platform/stack/packages/application/litmus/manifests/install.yaml
apiVersion: v1
kind: Service
metadata:
  name: litmus-auth-server-service
  namespace: adhar-system
  labels:
    app.kubernetes.io/component: litmus-auth-server
    app.kubernetes.io/instance: litmus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: litmus
    app.kubernetes.io/part-of: litmus
    app.kubernetes.io/version: 3.30.0
    helm.sh/chart: litmus-3.30.0
    litmuschaos.io/version: 3.30.0
  annotations:
    argocd.argoproj.io/sync-wave: '3'
spec:
  type: ClusterIP
  ports:
  - name: auth-server
    port: 9003
    targetPort: 3000
  - name: auth-rpc-server
    port: 3030
    targetPort: 3030
  selector:
    app.kubernetes.io/component: litmus-auth-server

---
apiVersion: v1
kind: Service
metadata:
  name: litmus-frontend-service
  namespace: adhar-system
  labels:
    app.kubernetes.io/component: litmus-frontend
    app.kubernetes.io/instance: litmus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: litmus
    app.kubernetes.io/part-of: litmus
    app.kubernetes.io/version: 3.30.0
    helm.sh/chart: litmus-3.30.0
    litmuschaos.io/version: 3.30.0
  annotations:
    argocd.argoproj.io/sync-wave: '3'
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9091
    targetPort: 8185
  selector:
    app.kubernetes.io/component: litmus-frontend

---
apiVersion: v1
kind: Service
metadata:
  name: litmus-server-service
  namespace: adhar-system
  labels:
    app.kubernetes.io/component: litmus-server
    app.kubernetes.io/instance: litmus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: litmus
    app.kubernetes.io/part-of: litmus
    app.kubernetes.io/version: 3.30.0
    helm.sh/chart: litmus-3.30.0
    litmuschaos.io/version: 3.30.0
  annotations:
    argocd.argoproj.io/sync-wave: '3'
spec:
  type: ClusterIP
  ports:
  - name: graphql-server
    port: 9002
    targetPort: 8080
  - name: graphql-rpc-server
    port: 8000
    targetPort: 8000
  - name: metrics
    port: 8889
    targetPort: 8889
  selector:
    app.kubernetes.io/component: litmus-server

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litmus-auth-server
  namespace: adhar-system
  labels:
    app.kubernetes.io/component: litmus-auth-server
    app.kubernetes.io/instance: litmus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: litmus
    app.kubernetes.io/part-of: litmus
    app.kubernetes.io/version: 3.30.0
    helm.sh/chart: litmus-3.30.0
    litmuschaos.io/version: 3.30.0
  annotations:
    argocd.argoproj.io/sync-wave: '3'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: litmus-auth-server
  template:
    metadata:
      labels:
        app.kubernetes.io/component: litmus-auth-server
        app.kubernetes.io/instance: litmus
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: litmus
        app.kubernetes.io/part-of: litmus
        app.kubernetes.io/version: 3.30.0
        helm.sh/chart: litmus-3.30.0
        litmuschaos.io/version: 3.30.0
    spec:
      automountServiceAccountToken: false
      containers:
      - name: auth-server
        image: litmuschaos.docker.scarf.sh/litmuschaos/litmusportal-auth-server:3.30.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: auth-server
        - containerPort: 3030
          name: auth-rpc-server
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 512Mi
          requests:
            cpu: 25m
            ephemeral-storage: 500Mi
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 2000
        volumeMounts: null
      volumes: null
      enableServiceLinks: false

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litmus-frontend
  namespace: adhar-system
  labels:
    app.kubernetes.io/component: litmus-frontend
    app.kubernetes.io/instance: litmus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: litmus
    app.kubernetes.io/part-of: litmus
    app.kubernetes.io/version: 3.30.0
    helm.sh/chart: litmus-3.30.0
    litmuschaos.io/version: 3.30.0
  annotations:
    argocd.argoproj.io/sync-wave: '3'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: litmus-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/component: litmus-frontend
        app.kubernetes.io/instance: litmus
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: litmus
        app.kubernetes.io/part-of: litmus
        app.kubernetes.io/version: 3.30.0
        helm.sh/chart: litmus-3.30.0
        litmuschaos.io/version: 3.30.0
    spec:
      automountServiceAccountToken: false
      volumes:
      - name: nginx-config
        configMap:
          name: litmus-frontend-nginx-configuration
      containers:
      - name: litmusportal-frontend
        image: litmuschaos.docker.scarf.sh/litmuschaos/litmusportal-frontend:3.30.0
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 512Mi
          requests:
            cpu: 25m
            ephemeral-storage: 500Mi
            memory: 128Mi
        securityContext: null
        livenessProbe:
          httpGet:
            path: /
            port: http
            scheme: HTTP
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        ports:
        - containerPort: 8185
          name: http
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      enableServiceLinks: false

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litmus-server
  namespace: adhar-system
  labels:
    app.kubernetes.io/component: litmus-server
    app.kubernetes.io/instance: litmus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: litmus
    app.kubernetes.io/part-of: litmus
    app.kubernetes.io/version: 3.30.0
    helm.sh/chart: litmus-3.30.0
    litmuschaos.io/version: 3.30.0
  annotations:
    argocd.argoproj.io/sync-wave: '3'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: litmus-server
  template:
    metadata:
      labels:
        app.kubernetes.io/component: litmus-server
        app.kubernetes.io/instance: litmus
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: litmus
        app.kubernetes.io/part-of: litmus
        app.kubernetes.io/version: 3.30.0
        helm.sh/chart: litmus-3.30.0
        litmuschaos.io/version: 3.30.0
    spec:
      automountServiceAccountToken: false
      volumes:
      - emptyDir: {}
        name: gitops-storage
      - emptyDir: {}
        name: hub-storage
      containers:
      - name: graphql-server
        image: litmuschaos.docker.scarf.sh/litmuschaos/litmusportal-server:3.30.0
        volumeMounts:
        - mountPath: /tmp/
          name: gitops-storage
        - mountPath: /tmp/version
          name: hub-storage
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: gql-server
        - containerPort: 8000
          name: gql-rpc-server
        - containerPort: 8889
          name: metrics
        resources:
          limits:
            cpu: '1'
            ephemeral-storage: 1Gi
            memory: 1Gi
          requests:
            cpu: 50m
            ephemeral-storage: 500Mi
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 2000
      enableServiceLinks: false
